# agentic-soc-platform

./: .gitignore  CONFIG.example.py  README.md  README_ZH.md  TODO.md  pyproject.toml  uvicorn.toml
.gemini/: GEMINI.md  settings.json
.run/: ASP.run.xml
AGENTS/: agent_cmdb.py  agent_knowledge.py  agent_siem.py  agent_ti.py  cmdb_agent.py  knowledge_agent.py  siem_agent.py
ASP/: asgi.py  settings.py
Automation/Handle/: playbook.py
Core/: models.py  serializers.py  views.py
Core/Handle/: baseauth.py  currentuser.py  user.py
DATA/Agent_CMDB/: system.md
DATA/Agent_SIEM/: system_prompt.md
DATA/Alert_Analysis_Agent/: L3_SOC_Analyst.md
DATA/Case_L3_SOC_Analyst_Agent/: L3_SOC_Analyst.md
DATA/Case_L3_SOC_Analyst_Agent_With_Tools/: L3_SOC_Analyst.md
DATA/Case_Threat_Hunting_Agent/: Analyst_Final_Human.md  Analyst_Final_System.md  Analyst_Human.md  Analyst_System.md  Analyst_System_EN.md  Intent_Human.md  Intent_System.md  Planner_Human.md  Planner_System.md  Report_Human.md  Report_System.md
DATA/EDR-Rule-11-Suspicious-Process-Spawned-by-Office/: EDR_L2_WORKBOOK.md  (+1 more)
Forwarder/: views.py
Lib/: api.py  baseapi.py  basemodule.py  baseplaybook.py  configs.py  llmapi.py  montior.py  xcache.py
MODULES/: EDR-Rule-11-Suspicious-Process-Spawned-by-Office.py  ES-Rule-21-Phishing_user_report_mail.py
PLAYBOOKS/: Alert_Analysis_Agent.py  Artifact_TI_Enrichment_By_AlienVaultOTX.py  Artifact_TI_Enrichment_By_Mock.py  Case_L3_SOC_Analyst_Agent.py  Case_L3_SOC_Analyst_Agent_With_Tools.py  Case_Threat_Hunting_Agent.py  TI_Artifact_query_by_AlienVaultOTX.py
(+46 files in other folders)
